manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: webapp
    app.kubernetes.io/component: svc
spec:
  selector:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: webapp
    app.kubernetes.io/component: webapp-deployment
  type: ClusterIP
  ports:
  - name: webapp-http
    protocol: TCP
    port: 8080
    targetPort: 8080
  # k8s v1.31 - ServiceTrafficDistribution featureGate
  trafficDistribution: PreferClose
