manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: webapp
    app.kubernetes.io/component: ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* ^/(metrics|healthz) {
        return 404;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - webapp.com
    secretName: webapp-cert-secret
  rules:
  - host: webapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc
            port:
              number: 8080
      # В случае, если нужно перенаправить запросы на default backend со статичной страницей, например 404.html
      # - path: /metrics
      #   pathType: Exact
      #   backend:
      #     service:
      #       name: default-backend-svc
      #       port:
      #         number: 8080
      # - path: /healthz
      #   pathType: Exact
      #   backend:
      #     service:
      #       name: default-backend-svc
      #       port:
      #         number: 8080
