manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp-network-policy
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: webapp
    app.kubernetes.io/component: networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: webapp
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
  # Если необходим статичный контент из S3 Minio
  # egress:
  # - to:
  #   - namespaceSelector:
  #       matchLabels:
  #         name: webapp-minio
  #   - podSelector:
  #       matchLabels:
  #         app.kubernetes.io/name: s3-minio
  #   ports:
  #   - protocol: TCP
  #     port: 9000
